# snowfakery-mcp

./: .gitmodules  .mcpbignore  .pre-commit-config.yaml  2026-01-15-19-20-gpt-4o-mini-main-536909e-21043415953.eval  2026-01-15-19-22-Meta-Llama-3.1-70B-Instruct-main-536909e-21043515332.eval  CI_IMPROVEMENTS.md  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  COPYRIGHT  FASTMCP3_REFACTOR_IDEAS.md  FASTMCP3_REFACTOR_PLAN.md  FASTMCP_LLM_DOCS.txt  MCP_SERVER_SPEC.md  README.md  RELEASE.md  SECURITY.md  TEST_COVERAGE.md  THIRD_PARTY_NOTICES.md  main.py  manifest.json  pyproject.toml  pytest.ini  server.json
.devcontainer/: devcontainer.json  postCreate.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.yml  config.yml  feature_request.yml  question.yml
.github/actions/publish-mcp-registry/: action.yml
.github/workflows/: build-mcpb.yml  ci.yml  eval-experiment.yml  publish-mcp-registry.yml  publish-pypi.yml  release-build.yml  release-dry-run.yml  release-tag.yml  release.yml  run-python-uv.yml  setup-env.yml
.tmp/: last_eval.json  test.mcpb
evals/: __init__.py  html_report.py  inspect_tasks.py  summarize_log.py
notebooks/: Snowfakery MCP Playground.ipynb
pypi-dist/: snowfakery_mcp-0.1.0-py3-none-any.whl
release-assets/: THIRD_PARTY_NOTICES.md  snowfakery-mcp-test.mcpb
scripts/: __init__.py  build_mcpb.py  generate_third_party_notices.py  prepare_release.py  test_workflows.py  update_mcp_metadata.py  version_utils.py
snowfakery_mcp/: __about__.py  __init__.py  __main__.py  prompts.py  server.py
snowfakery_mcp/core/: assets.py  config.py  errors.py  paths.py  snowfakery_app.py  text.py  timeout.py  types.py  validate.py
snowfakery_mcp/resources/: discovery.py  runs.py  static.py  templates.py
snowfakery_mcp/tools/: agentic.py  analyze.py  capabilities.py  docs.py  examples.py  mapping.py  run.py  validate.py
tests/: conftest.py  test_agentic.py  test_core_assets.py  test_core_config.py  test_core_errors.py  test_core_paths.py  test_core_text.py  test_core_timeout.py  test_mcp_integration.py  test_mcp_integration_stdio.py  test_prompts.py  test_prompts_extended.py  test_resources.py  test_resources_extended.py  test_resources_static_unit.py  test_resources_templates.py  test_server.py  test_tool_timeouts.py  test_tools_examples_extended.py  test_tools_integration.py
